<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            app:layout_constraintHeight_percent=".35"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:paddingLeft="8dp"
            android:text="Transformers"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/detail_image"
            app:layout_constraintTop_toBottomOf="@id/video_view" />

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="8dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toStartOf="@id/title_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_view" />

        <TextView
            android:id="@+id/detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:padding="8dp"
            android:text="2020"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_image"
            app:layout_constraintTop_toBottomOf="@+id/title_view" />

        <Button
            android:id="@+id/movie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:onClick="onClickOpenWebpageButton"
            android:padding="8dp"
            android:text="@string/homePage"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_release_date" />
        <!--allows description to be scrolled if it goes off screen-->

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_button"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teststring"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="24dp"/>

                <TextView
                    android:id="@+id/recommendTitleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended_title"
                    android:layout_margin="16dp"
                    android:textColor="@color/white"
                    android:textSize="16dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/scroll_view" />

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recommendedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>